src/test/ui/parser/issue-103143.stderr
error: invalid const generic expression
  --> $DIR/issue-103143.rs:2:13
   |
LL |     x::<#[a]y::<z>>
   |             ^^^^^^
   |
help: expressions must be enclosed in braces to be used as const generic arguments
   |
LL |     x::<#[a]{ y::<z> }>
   |             +        +

error[E0425]: cannot find value `x` in this scope
  --> $DIR/issue-103143.rs:2:5
   |
LL |     x::<#[a]y::<z>>
   |     ^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
